<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>is-ros2-mix-generator</name>
  <version>3.2.1</version>
  <description>Integration Service System Handle for ROS 2 (mix generator)</description>
  <maintainer email="team@greenroomrobotics.com">Greenroom Robotics</maintainer>
  <license>UNLICENSED</license>
  <url type="website">https://github.com/Greenroom-Robotics/ROS2-SH</url>

  <depend>is-core</depend>
  <depend>is-ros2</depend>
  <depend>rosidl_adapter</depend>
  <build_depend>boost</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
